test if changes done

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="css/all.min.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
-
+<!-- test the update -->
 <body class="py-3 rtl">
   <div class="container text-center">
     <nav class="navbar ">
