design enhancements and checking api

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title> Login </title>
+  <title> تسجيل الدخول </title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- trying to fix http security -->
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
