--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title> Sign Up </title>
+  <title> آيات </title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="icon" type="image/x-icon" href="fav.png">
   <meta name="viewport" content="width=\, initial-scale=1.0">
@@ -14,20 +14,20 @@
 
 <body class=" text-white d-none">
   <nav class="navbar bg-body-secondary shadow">
-    <div class="container-fluid px-4">
+    <div class="container px-4">
       <a class="navbar-brand">
-        <img src="../fav.png" alt="Logo" width="30" class="d-inline-block align-text-top">
-        Welcome
+        <!-- <img src="../fav.png" alt="Logo" width="30" class="d-inline-block align-text-top"> -->
+        <i class="fa-solid fa-mosque text-success"></i> آيات
       </a>
-      <button class="logoutBtn btn btn-danger">logout</button>
+      <button class="logoutBtn btn btn-danger">تسجيل الخروج</button>
     </div>
   </nav>
-  <div class="container text-center">
+  <div class="container text-center mt-5">
 
-    <section class="bg-dark p-4 rounded-2 mt-5">
-      <h2>Welcome User</h2>
-      <p id="ayah"></p>
-      <p id="ayahDetails"></p>
+    <h2 class="m-4 fs-1 text-dark">Welcome User</h2>
+    <section class="text-dark bg-body p-4 rounded-2 ">
+      <p id="ayah" class="fs-2"></p>
+      <p id="ayahDetails" class="fs-5 text-danger"></p>
     </section>
     <button class="newAyah btn btn-dark mt-4">آية جديدة</button>
   </div>
