--- a/pages/signup.html
+++ b/pages/signup.html
@@ -12,27 +12,6 @@
   <link rel="stylesheet" href="../css/main.css">
 </head>
 
-<!-- <body class="py-5">
-  <div class="container text-center">
-
-    <section class="bg-dark p-4 rounded-2">
-      <h1 class="text-white">Smart Login System</h1>
-      <div class="form-control my-4 text-dark">
-        <input class="form-control my-3" type="text" id="name" placeholder="Enter your name">
-        <input class="form-control my-3" type="email" id="mail" placeholder="Enter your email">
-        <input class="form-control my-3" type="password" id="password" placeholder="Enter your password">
-        <p class="validate-text d-none bg-success bg-opacity-10 mx-auto text-success p-1 my-3 rounded-1"> signing up success
-          and you will redirect to login page after while
-          <i class="fa-solid fa-spinner fa-spin text-dark "></i>
-        </p>
-
-        <button class="signupBtn btn btn-dark "> signup </button>
-        <p class=" mt-2">You have an account? <a href="../index.html">Sign in</a></p>
-      </div>
-    </section>
-
-  </div> -->
-
 <body class="py-3">
   <div class="container text-center">
     <nav class="navbar ">
@@ -45,7 +24,7 @@
     </nav>
 
     <section class=" p-4 rounded-2">
-      <img src="../body.png" alt="" class="img-fluid">
+      <img id='img-re' src="../body.png" alt="" style="margin-top: -80px;" class="img-fluid">
       <h1 class="main-text mt-4 fw-bold">من فضلك قم بتسجيل بياناتك</h1>
       <div class=" my-4 text-dark">
         <input class="form-control my-3" type="text" id="name" placeholder="أدخل اسمك">
