--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class=" px-4 rounded-2">
       <img id='img-re' src="./body.png" alt="" class="img-fluid ">
       <h1 class="main-text mt-4 fw-bold">من فضلك قم بتسجيل الدخول</h1>
-      <div class=" my-4 text-dark">
+      <div class=" form my-4 text-dark">
         <input class="form-control rounded-3 my-3 " type="email" id="mail" placeholder="أدخل البريد الالكتروني">
         <input class="form-control rounded-3 my-3" type="password" id="password" placeholder="أدخل كلمة المرور">
 
