--- a/pages/signup.html
+++ b/pages/signup.html
@@ -26,7 +26,7 @@
     <section class=" p-4 rounded-2">
       <img id='img-re' src="../body.png" alt="" style="margin-top: -80px;" class="img-fluid">
       <h1 class="main-text mt-4 fw-bold">من فضلك قم بتسجيل بياناتك</h1>
-      <div class=" my-4 text-dark">
+      <div class="form my-4 text-dark">
         <input class="form-control my-3" type="text" id="name" placeholder="أدخل اسمك">
         <input class="form-control rounded-3 my-3 " type="email" id="mail" placeholder="أدخل البريد الالكتروني">
         <input class="form-control rounded-3 my-3" type="password" id="password" placeholder="أدخل كلمة المرور">
