Enhance the validation and adding some styles

--- a/pages/home.html
+++ b/pages/home.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title> آيات </title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="icon" type="image/x-icon" href="../favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
   <meta name="viewport" content="width=\, initial-scale=1.0">
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@400;500;600;700&display=swap"
@@ -18,7 +18,7 @@
   <nav class="navbar bg-white">
     <div class="container px-4 row m-auto">
       <a class="navbar-brand fs-3 col-md-3 text-sm-center d-flex justify-content-center "><i
-          class="fa-solid fa-mosque text-success mx-2"></i>آيات</a>
+          class="fa-solid fa-mosque main-text mx-2"></i>آيات</a>
       <div class="col-md-7 d-flex justify-content-between flex-row-reverse flex-md-row flex-lg-row  ">
         <h2 class=" text-dark fs-4 fo-ibm">مرحباً <span class="main-text"></span></h2>
         <a class=" logoutBtn text-decoration-none main-text fo-ibm fs-5">تسجيل الخروج</a>
